OpenTok SDK Server

--- a/.envcopy
+++ b/.envcopy
@@ -1,5 +1,5 @@
 # enter your TokBox api key after the '=' sign below
-TOKBOX_API_KEY=your_api_key
+TOKBOX_API_KEY=45996162
 
 # enter your TokBox api key after the '=' sign below
-TOKBOX_SECRET=your_project_secret
+TOKBOX_SECRET=9ebc1996d9780c12c69695848a227f190e461b2d
